--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "^7.0",
         "silex/silex": "~2.0",
-        "dflydev/doctrine-orm-service-provider": "^2.0"
+        "dflydev/doctrine-orm-service-provider": "^2.0",
+        "sorien/silex-dbal-profiler": "^2.0"
     },
     "autoload": {
         "psr-0": { "App": "src/" }
