--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,15 @@
         "sorien/silex-dbal-profiler": "^2.0",
         "symfony/validator": "^3.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "doctrine/data-fixtures": "^1.2",
+        "symfony/browser-kit": "^3.2"
+    },
     "autoload": {
-        "psr-0": { "App": "src/" }
+        "psr-0": {
+            "App": "src/",
+            "tests\\integration\\App": "tests/integration/"
+        }
     }
 }
